--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tscconsole",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/winston": "^2.3.0",
     "cli-color": "^1.1.0",
+    "scribe-js": "^2.0.4",
     "winston": "^2.3.1"
   }
 }
